# ez_exc

./: Cargo.toml
.cargo/: config.toml
examples/: Cargo.toml
examples/examples/: info.rs
exc/: .env  Cargo.toml
exc-aden/: Cargo.toml  README.md
exc-aden/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-aden/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-aster/: Cargo.toml  README.md
exc-aster/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-aster/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-binance/: Cargo.toml  README.md
exc-binance/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-binance/src/: key.rs  lib.rs  response.rs
exc-bitget/: Cargo.toml  README.md
exc-bitget/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-bitget/src/: key.rs  lib.rs  response.rs
exc-bitmart/: Cargo.toml  README.md
exc-bitmart/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-bitmart/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-bitmart/src/futures_api/: types.rs
exc-bitmart/src/futures_api/http/: account.rs  book.rs  info.rs  mod.rs  trading.rs
exc-bitmart/src/futures_api/ws/: book.rs  mod.rs
exc-bitmart/src/service/: account.rs  book.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-bitmex/: Cargo.toml  README.md
exc-bitmex/examples/: account.rs  book.rs  info.rs  trading.rs
exc-bitmex/src/: key.rs  lib.rs  response.rs
exc-bitunix/: Cargo.toml  README.md
exc-bitunix/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-bitunix/src/: key.rs  lib.rs  response.rs
exc-bybit/: Cargo.toml  README.md
exc-bybit/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-bybit/src/: key.rs  lib.rs  response.rs
exc-coinw/: Cargo.toml  README.md
exc-coinw/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-coinw/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-custom/: Cargo.toml  README.md
exc-custom/src/api/: book.rs  info.rs  mod.rs  trading.rs
exc-custom/src/service/: book.rs  info.rs  mod.rs  trading.rs
exc-dex/: Cargo.toml  README.md
exc-dex/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-dex/src/: error.rs  key.rs  lib.rs
exc-dex/src/abi/: Cex.json  mod.rs
exc-dex/src/service/: account.rs  book.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-dex/src/three/: chain.rs  token.rs
exc-dydx/: .dydx.toml  Cargo.toml  README.md
exc-dydx/examples/: account.rs  book.rs  info.rs  trading.rs
exc-dydx/src/: key.rs  lib.rs  symnol.rs
exc-extended/: Cargo.toml  README.md
exc-extended/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-extended/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-gate/: Cargo.toml  README.md
exc-gate/examples/: account.rs  book.rs  info.rs  trading.rs
exc-gate/src/: key.rs  lib.rs  response.rs
exc-grvt/: Cargo.toml  README.md
exc-grvt/examples/: account.rs  book.rs  info.rs  trading.rs
exc-grvt/src/: key.rs  lib.rs  symnol.rs
exc-htx/: Cargo.toml  README.md
exc-htx/examples/: account.rs  book.rs  info.rs  trading.rs
exc-htx/src/: cert.rs  key.rs  lib.rs  response.rs  symnol.rs
exc-hyperliquid/: Cargo.toml  README.md
exc-hyperliquid/examples/: account.rs  book.rs  info.rs  markets.rs  trading.rs
exc-hyperliquid/src/: key.rs  lib.rs  symnol.rs
exc-hyperliquid/src/service/: account.rs  book.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-hyperliquid/src/ws/: mod.rs
exc-kcex/: Cargo.toml  README.md
exc-kcex/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-kcex/src/: key.rs  lib.rs  symnol.rs
exc-lbank/: Cargo.toml  README.md
exc-lbank/examples/: account.rs  book.rs  info.rs  trading.rs
exc-lbank/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-lighter/: Cargo.toml  README.md
exc-lighter/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-lighter/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-mexc/: Cargo.toml  README.md
exc-mexc/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-mexc/src/: exchange.rs  interface.rs  key.rs  lib.rs  response.rs  symnol.rs  types.rs
exc-mexc/src/futures_api/http/: account.rs  book.rs  info.rs  mod.rs  trading.rs
exc-mexc/src/futures_web/http/: account.rs  book.rs  info.rs  mod.rs  trading.rs
exc-mexc/src/service/: account.rs  book.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-mexc/src/spot_api/http/: account.rs  book.rs  mod.rs  ping.rs  trading.rs
exc-mexc/src/spot_web/http/: account.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-okx/: Cargo.toml  README.md
exc-okx/examples/: account.rs  book.rs  info.rs  trading.rs
exc-okx/src/: interface.rs  key.rs  lib.rs  response.rs  symnol.rs
exc-pacifica/: Cargo.toml  README.md
exc-pacifica/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-pacifica/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-paradex/: Cargo.toml  README.md
exc-paradex/examples/: account.rs  book.rs  info.rs  trading.rs
exc-paradex/src/: key.rs  lib.rs  symnol.rs
exc-simu/: Cargo.toml  README.md
exc-simu/src/service/: book.rs  info.rs  mod.rs  trading.rs
exc-standx/: Cargo.toml  README.md
exc-standx/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-standx/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-toobit/: Cargo.toml  README.md
exc-toobit/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-util/: Cargo.toml
exc-util/src/: asset.rs  constant.rs  error.rs  http.rs  interface.rs  lib.rs  symbol.rs  traits.rs
exc-util/src/types/: account.rs  book.rs  earn.rs  info.rs  mod.rs  order.rs
exc-weex/: Cargo.toml  README.md
exc-xt/: Cargo.toml  README.md
exc-xt/examples/: account.rs  book.rs  earn.rs  info.rs  trading.rs
exc-xt/src/: key.rs  lib.rs  response.rs  symnol.rs
exc-xt/src/futures_api/: types.rs
exc-xt/src/futures_api/http/: account.rs  book.rs  info.rs  mod.rs  trading.rs
exc-xt/src/service/: account.rs  book.rs  earn.rs  info.rs  mod.rs  trading.rs
exc-xt/src/spot_api/http/: account.rs  mod.rs
exc/src/: lib.rs
(+303 files in other folders)
