[workspace]
members = [
  "exc-util",
  "exc-custom",
  "exc-simu",
  "exc-dex",
  "exc-dydx",
  "exc-okx",
  "exc-bybit",
  "exc-gate",
  "exc-htx",
  "exc-binance",
  "exc-bitget",
  "exc-bitmart",
  "exc-mexc",
  "exc-kcex",
  "exc-bitunix",
  "exc-weex",
  "exc-xt",
  "exc-aster",
  "exc-aden",
  "exc-lighter",
]
resolver = "2"

[patch.crates-io]
exc-core = {git="https://github.com/rise0chen/exc", branch="rise"}
