[workspace]
members = [
  "exc-aden",
  "exc-aster",
  "exc-binance",
  "exc-bitget",
  "exc-bitmart",
  "exc-bitunix",
  "exc-bybit",
  "exc-custom",
  "exc-dex",
  "exc-dydx",
  "exc-gate",
  "exc-htx",
  "exc-hyperliquid",
  "exc-kcex",
  "exc-lighter",
  "exc-mexc",
  "exc-okx",
  "exc-paradex",
  "exc-simu",
  "exc-util",
  "exc-weex",
  "exc-xt",
]
resolver = "2"

[patch.crates-io]
dydx = {git = "https://github.com/rise0chen/dydx", branch = "main"}
hypersdk = {git = "https://github.com/rise0chen/hypersdk", branch = "main"}
lighter-rs = {git = "https://github.com/rise0chen/lighter-rs", branch = "rise"}
paradex = {git = "https://github.com/rise0chen/paradex-rs", branch = "main"}
