[package]
authors = ["rise0chen"]
description = "exc examples"
edition = "2024"
keywords = ["exchange"]
license = "MIT"
name = "examples"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]
default = ["rustls-tls"]
native-tls = ["exc/native-tls"]
rustls-tls = ["exc/rustls-tls"]

[dependencies]
anyhow = {version = "1"}
dotenvy = {version = "0.15"}
exc = {path = "../exc", default-features = false}
serde_json = "1"
tokio = {version = "1"}
tracing = {version = "0.1"}
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
