[package]
authors = ["rise0chen"]
description = "exc examples"
edition = "2024"
keywords = ["exchange"]
license = "MIT"
name = "examples"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]
default = ["rustls-tls"]
native-tls = ["exc/native-tls"]
rustls-tls = ["exc/rustls-tls"]

[dependencies]
anyhow = {version = "1", default-features = false}
dotenvy = {version = "0.15", default-features = false}
exc = {path = "../exc", default-features = false}
serde_json = {version = "1", default-features = false, features = ["alloc"]}
tokio = {version = "1", default-features = false}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"]}
