[package]
authors = ["rise0chen"]
description = "Custom exchange services"
edition = "2021"
keywords = ["exchange"]
license = "MIT"
name = "exc-custom"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]

[dependencies]
exc-util = {path = "../exc-util"}
futures-util = {version = "0.3", default-features = false}
smol_str = {version = "0.3", default-features = false, features = ["std"]}
tokio = {version = "1", default-features = false, features = ["sync", "rt-multi-thread", "time", "macros"]}
tower = {version = "0.5", default-features = false, features = ["util", "reconnect", "buffer", "timeout", "retry", "ready-cache"]}
tracing = {version = "0.1", default-features = false}

[dev-dependencies]
dotenvy = {version = "0.15", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"]}
