[package]
authors = ["rise0chen"]
description = "DEX exchange services"
edition = "2021"
keywords = ["exchange", "tower", "dex"]
license = "MIT"
name = "exc-dex"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]
default = ["rustls-tls"]
native-tls = ["exc-util/native-tls", "alloy/reqwest-native-tls"]
rustls-tls = ["exc-util/rustls-tls", "alloy/reqwest-rustls-tls"]

[dependencies]
alloy = {version = "2", default-features = false, features = ["provider-http", "provider-ws"]}
alloy-contract = {version = "2", default-features = false}
alloy-primitives = {version = "1", default-features = false}
alloy-signer = {version = "2", default-features = false}
alloy-signer-local = {version = "2", default-features = false}
alloy-sol-types = {version = "1", default-features = false, features = ["json"]}
anyhow = {version = "1", default-features = false}
cfg-if = {version = "1", default-features = false}
either = {version = "1", default-features = false}
exc-util = {path = "../exc-util"}
futures-util = {version = "0.3", default-features = false}
hex = {version = "0.4", default-features = false, features = ["alloc"]}
hyper = {version = "1", default-features = false, features = ["client", "http1"]}
num_enum = {version = "0.7", default-features = false}
pin-project-lite = {version = "0.2", default-features = false}
rand = {version = "0.10", default-features = false, features = ["thread_rng"]}
reqwest = {version = "0.13", default-features = false}
rust_decimal = {version = "1", default-features = false, features = ["serde"]}
serde = {version = "1", default-features = false, features = ["derive"]}
tokio = {version = "1", default-features = false, features = ["sync", "rt-multi-thread", "time", "macros"]}
tracing = {version = "0.1", default-features = false}

[dev-dependencies]
dotenvy = {version = "0.15", default-features = false}
serde_json = {version = "1", default-features = false, features = ["alloc"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"]}
