[package]
authors = ["rise0chen"]
description = "HYPERLIQUID exchange services"
edition = "2021"
keywords = ["exchange", "tower", "hyperliquid"]
license = "MIT"
name = "exc-hyperliquid"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]
default = ["rustls-tls"]
native-tls = ["exc-util/native-tls"]
rustls-tls = ["exc-util/rustls-tls"]

[dependencies]
anyhow = {version = "1", default-features = false}
bigdecimal = {version = "0.4", default-features = false}
cfg-if = {version = "1", default-features = false}
chrono = {version = "0.4", default-features = false, features = ["serde"]}
either = {version = "1", default-features = false}
exc-util = {path = "../exc-util"}
futures-util = {version = "0.3", default-features = false}
hex = {version = "0.4", default-features = false, features = ["alloc"]}
hyper = {version = "1", default-features = false, features = ["client", "http1"]}
hypersdk = {version = "0.2", default-features = false}
num_enum = {version = "0.7", default-features = false}
pin-project-lite = {version = "0.2", default-features = false}
rust_decimal = {version = "1", default-features = false, features = ["serde"]}
serde = {version = "1", default-features = false, features = ["derive"]}
serde_json = {version = "1", default-features = false, features = ["alloc"]}
time = {version = "0.3", default-features = false, features = ["serde-human-readable", "macros"]}
tokio = {version = "1", default-features = false, features = ["sync", "rt-multi-thread", "time", "macros"]}
tracing = {version = "0.1", default-features = false}

[dev-dependencies]
dotenvy = {version = "0.15", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["std", "fmt", "env-filter"]}
