[package]
authors = ["rise0chen"]
description = "exc utils"
edition = "2021"
keywords = ["exchange", "tower"]
license = "MIT"
name = "exc-util"
readme = "./README.md"
repository = ""
version = "0.7.0"

[dependencies]
anyhow = {version = "1"}
futures-util = "0.3.25"
http = {version = "1.1"}
num_enum = {version = "0.7"}
reqwest = {version = "0.13", default-features = false}
rust_decimal = {version = "1"}
serde = {version = "1", features = ["derive"]}
smol_str = {version = "0.3", features = ["serde"]}
thiserror = "2"
tower = {version = "0.5", default-features = false}
