[package]
authors = ["rise0chen"]
description = "exc utils"
edition = "2021"
keywords = ["exchange", "tower"]
license = "MIT"
name = "exc-util"
readme = "./README.md"
repository = ""
version = "0.7.0"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls-tls = ["reqwest/rustls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
anyhow = {version = "1", default-features = false}
futures-util = {version = "0.3", default-features = false}
http = {version = "1", default-features = false}
num_enum = {version = "0.7", default-features = false}
reqwest = {version = "0.13", default-features = false, features = ["gzip"]}
rust_decimal = {version = "1", default-features = false, features = ["serde"]}
serde = {version = "1", default-features = false, features = ["derive"]}
smol_str = {version = "0.3", default-features = false, features = ["serde"]}
thiserror = {version = "2", default-features = false}
time = {version = "0.3", default-features = false, features = ["std"]}
tokio-tungstenite = {version = "0.28", default-features = false, features = ["connect"]}
tower = {version = "0.5", default-features = false}
